add doc for hadoop-common and hadoop-hdfs